--- a/erc20/rust/host/Cargo.toml
+++ b/erc20/rust/host/Cargo.toml
@@ -13,8 +13,8 @@ serde = { version = "1.0", default-features = false, features = [
     "derive",
     "alloc",
 ] }
-serde_json = "1.0.111"
 clap = { version = "4.4.17", features = ["derive"] }
 base64 = "0.22.1"
 utils = { path = "../utils" }
 hex = "0.4.3"
+borsh = "1.5.1"
