--- a/erc20/rust/host/Cargo.toml
+++ b/erc20/rust/host/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 methods = { path = "../methods" }
+sdk = { git = "https://github.com/Hyle-org/hyle.git", package = "sdk", branch = "sdk" }
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 risc0-zkvm = { version = "1.1.1" }
 env_logger = "0.10"
