--- a/erc20/rust/host/Cargo.toml
+++ b/erc20/rust/host/Cargo.toml
@@ -18,3 +18,6 @@ base64 = "0.22.1"
 utils = { path = "../utils" }
 hex = "0.4.3"
 borsh = "1.5.1"
+reqwest = "0.12.8"
+anyhow = "1.0.89"
+serde_json = "1.0.128"
