Pin hyle version & add Cargo.lock

--- a/simple-identity/host/Cargo.toml
+++ b/simple-identity/host/Cargo.toml
@@ -4,9 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-sdk = { git = "https://github.com/hyle-org/hyle", package = "hyle-contract-sdk" }
-client-sdk = { git = "https://github.com/hyle-org/hyle", package = "client-sdk" }
-hyle = { git = "https://github.com/hyle-org/hyle", default-features = false, package = "hyle" }
+sdk = { git = "https://github.com/hyle-org/hyle", package = "hyle-contract-sdk", rev = "47f85d47" }
+client-sdk = { git = "https://github.com/hyle-org/hyle", package = "client-sdk", rev = "47f85d47" }
+hyle = { git = "https://github.com/hyle-org/hyle", default-features = false, package = "hyle", rev = "47f85d47" }
 contract = { path = "../contract", package = "contract"}
 
 # hyle = { git = "https://github.com/hyle-org/hyle", branch = "generic_tx_builder", package = "hyle" }
