--- a/simple-identity/methods/guest/Cargo.toml
+++ b/simple-identity/methods/guest/Cargo.toml
@@ -8,4 +8,4 @@ edition = "2021"
 [dependencies]
 sdk = { git = "https://github.com/hyle-org/hyle", package = "hyle-contract-sdk", features = ["risc0"], rev = "47f85d47" }
 risc0-zkvm = { version = "1.2.0", default-features = false, features = ['std'] }
-contract = { path = "../../contract", package = "contract"}
+contract-identity = { path = "../../contract"}
