--- a/simple-token-sp1/program/Cargo.toml
+++ b/simple-token-sp1/program/Cargo.toml
@@ -6,6 +6,6 @@ edition = "2021"
 [dependencies]
 sdk = { workspace = true, features = ["sp1"] }
 contract = { path = "../lib", package = "contract"}
-sp1-zkvm = "4.0.0-rc.8"
+sp1-zkvm = "4.0.0"
 
 
