--- a/simple-token-sp1/script/Cargo.toml
+++ b/simple-token-sp1/script/Cargo.toml
@@ -14,7 +14,7 @@ sp1-sdk = "4.0.0"
 sdk = { workspace = true }
 contract = { path = "../lib", package = "contract"}
 
-client-sdk = { git = "https://github.com/hyle-org/hyle", package = "client-sdk", features = ["sp1", "rest"], branch = "api_clients"  }
+client-sdk = { git = "https://github.com/hyle-org/hyle", package = "client-sdk", features = ["sp1", "rest"], branch = "main"  }
 
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 serde = "1.0"
