⬆️  Update hyle with new sdk (#29)
* ⬆️  Update hyle with new sdk

* Use main

* use main

* Update ticket app

--- a/simple-token-sp1/script/Cargo.toml
+++ b/simple-token-sp1/script/Cargo.toml
@@ -9,13 +9,12 @@ name = "script"
 path = "src/bin/main.rs"
 
 [dependencies]
-sp1-sdk = "4.0.0-rc.8"
+sp1-sdk = "4.0.0"
 
 sdk = { workspace = true }
 contract = { path = "../lib", package = "contract"}
 
-client-sdk = { git = "https://github.com/hyle-org/hyle", package = "client-sdk", features = ["sp1"], branch = "sp1_4_0_0"  }
-hyle = { git = "https://github.com/hyle-org/hyle", default-features = false, package = "hyle", branch = "sp1_4_0_0"  }
+client-sdk = { git = "https://github.com/hyle-org/hyle", package = "client-sdk", features = ["sp1", "rest"], branch = "main"  }
 
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 serde = "1.0"
