--- a/simple-identity/contract/Cargo.toml
+++ b/simple-identity/contract/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-sdk = { git = "https://github.com/hyle-org/hyle", package = "hyle-contract-sdk", rev = "47f85d47" }
+sdk = { git = "https://github.com/hyle-org/hyle", package = "hyle-contract-sdk", branch = "main" }
 serde = { version = "1.0", default-features = false, features = [
     "derive",
     "alloc",
