--- a/simple-identity/methods/guest/Cargo.toml
+++ b/simple-identity/methods/guest/Cargo.toml
@@ -6,6 +6,6 @@ edition = "2021"
 [workspace]
 
 [dependencies]
-sdk = { git = "https://github.com/hyle-org/hyle", package = "hyle-contract-sdk", features = ["risc0"], rev = "47f85d47" }
+sdk = { git = "https://github.com/hyle-org/hyle", package = "hyle-contract-sdk", features = ["risc0"], branch = "main" }
 risc0-zkvm = { version = "1.2.0", default-features = false, features = ['std'] }
 contract-identity = { path = "../../contract"}
