--- a/simple-token-sp1/Cargo.toml
+++ b/simple-token-sp1/Cargo.toml
@@ -7,6 +7,8 @@ members = [
 resolver = "2"
 
 [workspace.dependencies]
-sdk = { git = "https://github.com/hyle-org/hyle", package = "hyle-contract-sdk", branch = "main" }
+sdk = { git = "https://github.com/hyle-org/hyle", package = "hyle-contract-sdk", tag = "v0.7.1" }
+client-sdk = { git = "https://github.com/hyle-org/hyle", package = "client-sdk", tag = "v0.7.1"  }
+
 
 
