--- a/ticket-app/host/Cargo.toml
+++ b/ticket-app/host/Cargo.toml
@@ -4,8 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-sdk = { git = "https://github.com/hyle-org/hyle", package = "hyle-contract-sdk", branch="main" }
-client-sdk = { git = "https://github.com/hyle-org/hyle", package = "client-sdk", features = ["risc0", "rest"], branch="main" }
+sdk = { workspace = true }
+client-sdk = { workspace = true, features = ["rest", "risc0"] }
 contract-ticket-app = { path = "../contract", package = "contract-ticket-app"}
 contract-identity = { path = "../../simple-identity/contract"}
 contract = { path = "../../simple-token/contract", package = "contract"}
