--- a/simple-identity-sp1/program/Cargo.toml
+++ b/simple-identity-sp1/program/Cargo.toml
@@ -1,9 +1,11 @@
 [package]
 version = "0.1.0"
-name = "fibonacci-program"
+name = "simple_token"
 edition = "2021"
 
 [dependencies]
-alloy-sol-types = { workspace = true }
-sp1-zkvm = "4.0.0"
-fibonacci-lib = { path = "../lib" }
+sdk = { workspace = true, features = ["sp1"] }
+contract = { path = "../lib", package = "contract"}
+sp1-zkvm = { git = "https://github.com/succinctlabs/sp1", tag = "v4.0.1" }
+
+
