--- a/simple-identity-sp1/script/Cargo.toml
+++ b/simple-identity-sp1/script/Cargo.toml
@@ -1,23 +1,33 @@
 [package]
-name = "host"
 version = "0.1.0"
+name = "script"
 edition = "2021"
+default-run = "script"
+
+[[bin]]
+name = "script"
+path = "src/bin/main.rs"
 
 [dependencies]
-sdk = { workspace = true }
-client-sdk = { workspace = true, features = ["rest", "risc0"] }
-contract-identity = { path = "../contract" }
+sp1-sdk = "4.0.0"
 
-# hyle = { git = "https://github.com/hyle-org/hyle", branch = "generic_tx_builder", package = "hyle" }
-methods-identity = { path = "../methods" }
-risc0-zkvm = { version = "1.2.0" }
+sdk = { workspace = true }
+
+client-sdk = { workspace = true, features = ["sp1", "rest"] }
+
+contract = { path = "../lib", package = "contract"}
+
+
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 serde = "1.0"
 serde_json = "1.0.133"
 clap = { version = "4.5.23", features = ["derive"] }
-bincode = { version = "2.0.0-rc.3" }
+bincode = { version = "1.3.3" }
 hex = "0.4.3"
 anyhow = "1.0.95"
 tokio = { version = "1.42.0", features = ["full", "tracing"] }
 reqwest = "0.12.9"
 borsh = "1.5.3"
+
+[build-dependencies]
+sp1-helper = "3.4.0"
