--- a/ticket-app/Cargo.toml
+++ b/ticket-app/Cargo.toml
@@ -3,8 +3,8 @@ resolver = "2"
 members = ["host", "contract", "methods"]
 
 [workspace.dependencies]
-sdk = { git = "https://github.com/hyle-org/hyle", package = "hyle-contract-sdk", tag = "v0.7.1" } # don't forget to update methods/guest/Cargo.toml 
-client-sdk = { git = "https://github.com/hyle-org/hyle", package = "client-sdk", tag = "v0.7.1" }
+sdk = { git = "https://github.com/hyle-org/hyle", package = "hyle-contract-sdk", branch = "main" } # don't forget to update methods/guest/Cargo.toml 
+client-sdk = { git = "https://github.com/hyle-org/hyle", package = "client-sdk", branch = "main" }
 
 # Always optimize; building and running the guest takes much longer without optimization.
 [profile.dev]
