--- a/simple-token/methods/guest/Cargo.toml
+++ b/simple-token/methods/guest/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [workspace]
 
 [dependencies]
-sdk = { git = "https://github.com/hyle-org/hyle", package = "hyle-contract-sdk", features = ["risc0"], branch = "main" }
+sdk = { git = "https://github.com/hyle-org/hyle", package = "hyle-contract-sdk", features = ["risc0"], tag = "v0.9.0" }
 contract = { path = "../../contract", package = "contract"}
 
 risc0-zkvm = { version = "1.2.2", default-features = false, features = ['std'] }
