--- a/identity-WebAuthn/contract/Cargo.toml
+++ b/identity-WebAuthn/contract/Cargo.toml
@@ -13,3 +13,4 @@ bincode = { version = "2.0.0-rc.3" }
 serde_json = "1.0"
 hex = "0.4.3"
 sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8" }
+p256 = { version = "0.13", default-features = false, features = ["ecdsa"] }
