--- a/simple-identity-sp1/lib/Cargo.toml
+++ b/simple-identity-sp1/lib/Cargo.toml
@@ -10,3 +10,6 @@ serde = { version = "1.0", default-features = false, features = [
     "alloc",
 ] }
 bincode = { version = "2.0.0-rc.3" }
+serde_json = "1.0"
+hex = "0.4.3"
+sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", tag = "sha2-v0.10.8-patch-v1" }
