--- a/simple-identity-sp1/program/Cargo.toml
+++ b/simple-identity-sp1/program/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 version = "0.1.0"
-name = "simple_token"
+name = "simple_identity"
 edition = "2021"
 
 [dependencies]
 sdk = { workspace = true, features = ["sp1"] }
 contract = { path = "../lib", package = "contract"}
-sp1-zkvm = { git = "https://github.com/succinctlabs/sp1", tag = "v4.0.1" }
+sp1-zkvm = "4.0.0"
