--- a/simple-token/host/Cargo.toml
+++ b/simple-token/host/Cargo.toml
@@ -8,15 +8,8 @@ sdk = { workspace = true }
 client-sdk = { workspace = true, features = ["rest", "risc0"] }
 contract = { path = "../contract", package = "contract"}
 
-# hyle = { git = "https://github.com/hyle-org/hyle", branch = "generic_tx_builder", package = "hyle" }
 methods = { path = "../methods" }
-risc0-zkvm = { version = "1.2.2" }
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
-serde = "1.0"
-serde_json = "1.0.133"
 clap = { version = "4.5.23", features = ["derive"] }
-bincode = { version = "2.0.0-rc.3" }
-hex = "0.4.3"
-anyhow = "1.0.95"
+borsh = "1.5.5"
 tokio = { version = "1.42.0", features = ["full", "tracing"] }
-reqwest = "0.12.9"
