--- a/ticket-app/contract/Cargo.toml
+++ b/ticket-app/contract/Cargo.toml
@@ -9,4 +9,4 @@ serde = { version = "1.0", default-features = false, features = [
     "derive",
     "alloc",
 ] }
-bincode = { version = "2.0.0-rc.3" }
+borsh = "1.5.5"
