--- a/ticket-app/host/Cargo.toml
+++ b/ticket-app/host/Cargo.toml
@@ -13,13 +13,8 @@ contract = { path = "../../simple-token/contract", package = "contract"}
 methods-identity = { path = "../../simple-identity/methods" }
 methods-ticket-app = { path = "../methods" }
 methods = { path = "../../simple-token/methods" }
-risc0-zkvm = { version = "1.2.2" }
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
-serde = "1.0"
-serde_json = "1.0.133"
 clap = { version = "4.5.23", features = ["derive"] }
-bincode = { version = "2.0.0-rc.3" }
-hex = "0.4.3"
+borsh = "1.5.5"
 anyhow = "1.0.95"
 tokio = { version = "1.42.0", features = ["full", "tracing"] }
-reqwest = "0.12.9"
