--- a/simple-token-sp1/program/Cargo.toml
+++ b/simple-token-sp1/program/Cargo.toml
@@ -6,4 +6,4 @@ edition = "2021"
 [dependencies]
 sdk = { workspace = true, features = ["sp1"] }
 contract = { path = "../lib", package = "contract"}
-sp1-zkvm = { git = "https://github.com/succinctlabs/sp1", tag = "v4.0.1" }
+sp1-zkvm = { version = "4.1.0" }
