--- a/simple-identity/contract/Cargo.toml
+++ b/simple-identity/contract/Cargo.toml
@@ -6,10 +6,14 @@ edition = "2021"
 [dependencies]
 sdk = { workspace = true }
 serde = { version = "1.0", default-features = false, features = [
-    "derive",
-    "alloc",
+  "derive",
+  "alloc",
 ] }
 borsh = { version = "1.5.5" }
 serde_json = "1.0"
 hex = "0.4.3"
 sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8" }
+
+[features]
+default = []
+client = []
