--- a/check-secret-noir/frontend/package.json
+++ b/check-secret-noir/frontend/package.json
@@ -1,10 +1,22 @@
 {
-  "name": "check-secret-app",
-  "version": "1.0.0",
-  "main": "index.js",
+  "name": "hyle-check-secret",
+  "description": "A library for checking secrets using Hyle and Noir.",
+  "author": "Hyle",
+  "license": "MIT",
+  "version": "0.0.0",
+  "type": "module",
+  "main": "dist/lib.js",
+  "types": "dist/lib.d.ts",
+  "files": [
+    "dist",
+    "lib.ts"
+  ],
   "scripts": {
     "dev": "vite",
-    "build": "vite build"
+    "build": "vite build",
+    "build:lib": "tsc",
+    "prepublishOnly": "bun run build:lib",
+    "publish": "np --no-tests"
   },
   "dependencies": {
     "@aztec/bb.js": "0.82.2",
@@ -13,6 +25,10 @@
     "hyle": "0.2.2"
   },
   "devDependencies": {
-    "vite": "^6.2.5"
+    "@types/bun": "^1.1.6",
+    "np": "^10.2.0",
+    "vite": "^6.2.5",
+    "typescript": "^5.4.2",
+    "esbuild": "^0.20.1"
   }
 }
