--- a/check-secret-noir/frontend/package.json
+++ b/check-secret-noir/frontend/package.json
@@ -3,7 +3,7 @@
   "description": "A library for checking secrets using Hyle and Noir.",
   "author": "Hyle",
   "license": "MIT",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "type": "module",
   "main": "dist/lib.js",
   "types": "dist/lib.d.ts",
@@ -16,7 +16,7 @@
     "build": "vite build",
     "build:lib": "tsc",
     "prepublishOnly": "bun run build:lib",
-    "publish": "np --no-tests"
+    "pub": "np --no-tests"
   },
   "dependencies": {
     "@aztec/bb.js": "0.82.2",
