--- a/check-secret-noir/frontend/package.json
+++ b/check-secret-noir/frontend/package.json
@@ -3,10 +3,10 @@
   "description": "A library for checking secrets using Hyle and Noir.",
   "author": "Hyle",
   "license": "MIT",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "type": "module",
-  "main": "dist/lib.js",
-  "types": "dist/lib.d.ts",
+  "main": "dist/frontend/lib.js",
+  "types": "dist/fronted/lib.d.ts",
   "files": [
     "dist",
     "lib.ts"
