WIP - update to risc0 2.0 and latest releases

--- a/simple-identity/host/Cargo.toml
+++ b/simple-identity/host/Cargo.toml
@@ -11,5 +11,6 @@ contract-identity = { path = "../contract" }
 methods-identity = { path = "../methods" }
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 clap = { version = "4.5.23", features = ["derive"] }
-borsh = "1.5.5"
+borsh = "1.5.7"
 tokio = { version = "1.42.0", features = ["full", "tracing"] }
+anyhow = "1.0.96"
