--- a/check-secret-noir/frontend/package.json
+++ b/check-secret-noir/frontend/package.json
@@ -3,32 +3,39 @@
   "description": "A library for checking secrets using Hyli and Noir.",
   "author": "Hyli",
   "license": "MIT",
-  "version": "0.3.2",
+  "version": "0.3.3",
   "type": "module",
-  "main": "dist/frontend/lib.js",
+  "main": "dist/check-secret.cjs.js",
+  "module": "dist/check-secret.esm.js",
+  "exports": {
+    "import": "./dist/check-secret.esm.js",
+    "require": "./dist/check-secret.cjs.js"
+  },
   "types": "dist/frontend/lib.d.ts",
   "files": [
-    "dist",
-    "lib.ts"
+    "dist"
   ],
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "build:lib": "tsc",
-    "prepublishOnly": "bun run build:lib",
+    "prepublishOnly": "bun run build && bun run build:lib",
     "pub": "npm publish"
   },
-  "dependencies": {
+  "peerDependencies": {
     "@aztec/bb.js": "0.82.2",
     "@noir-lang/noir_js": "1.0.0-beta.2",
-    "@noir-lang/noir_wasm": "1.0.0-beta.2",
+    "@noir-lang/noir_wasm": "1.0.0-beta.2"
+  },
+  "dependencies": {
     "hyli": "^0.3.0"
   },
   "devDependencies": {
-    "@types/bun": "^1.1.6",
+    "@types/bun": "^1.2.14",
+    "esbuild": "^0.20.2",
     "np": "^10.2.0",
-    "vite": "^6.2.5",
-    "typescript": "^5.4.2",
-    "esbuild": "^0.20.1"
+    "typescript": "^5.8.3",
+    "vite": "^6.3.5",
+    "vite-bundle-analyzer": "^0.21.0"
   }
 }
